--- a/app/index.html
+++ b/app/index.html
@@ -46,63 +46,54 @@
             <div class="picture-bg"></div>
                 <div class="main-slogan-wrap">
                     <div class="container">
-                        <div class="main-slogan">
-                            <div class="main-slogan__top">
-                               Мобильное приложение открывает 
-                            </div>
-                            <div class="main-slogan__middle">
-                                К СВОБОДЕ УПРАВЛЕНИЯ БИЗНЕСОМ!
-                            </div>
-                            <div class="main-slogan__bottom">
-                                бизнеса, связи с клиентами и пользователями
-                            </div>
-                            <a href="" class="btn" data-toggle="modal" data-target="#free-consultation">получите бесплатную консультацию</a>
+                        <div class="flexslider slider-1">
+                            <ul class="slides">
+                                <li>
+                                    <div class="main-slogan">
+                                        <div class="main-slogan__top">
+                                            Мобильное приложение открывает 
+                                        </div>
+                                        <div class="main-slogan__middle">
+                                            неограниченные возможности для развития
+                                        </div>
+                                        <div class="main-slogan__bottom">
+                                            бизнеса, связи с клиентами и пользователями
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="main-slogan">
+                                        <div class="main-slogan__top">
+                                            ОТ ИДЕИ — 
+                                        </div>
+                                        <div class="main-slogan__middle">
+                                           К СВОБОДЕ УПРАВЛЕНИЯ БИЗНЕСОМ!
+                                        </div>
+                                        <div class="main-slogan__bottom main-slogan__bottom--size">
+                                            Разработаем мобильное приложение под любую бизнес-задачу!
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="main-slogan">
+                                        <div class="main-slogan__top">
+                                            Есть идея? Запустите мобильное приложение
+                                        </div>
+                                        <div class="main-slogan__middle">
+                                           заработайте на своем стартапе
+                                        </div>
+                                        <div class="main-slogan__bottom">
+                                            уже сегодня!
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
+                        <a href="" class="btn" data-toggle="modal" data-target="#free-consultation">получите бесплатную консультацию</a>
                     </div>
                 </div>
         </header>
     </section>
-
-    <!--<section class="slider-laptop">
-        <div class="container">
-            <div class="row">
-                <div class="slider-laptop__items">
-                    <div class="col-md-12">
-                        <div class="row">
-                            <div class="flexslider slider-1 center-block">
-                                <ul class="slides center-block text-center">
-                                    <li>
-                                        <img src="images/slide1.jpg" class="img-responsive"/>
-                                        <div class="flex-caption flex-caption--mod">
-                                            Есть идея? Запустите мобильное приложение и 
-                                            <div class="warning">заработайте на своем стартапе </div>
-                                            уже сегодня!
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <img src="images/slide2.jpg" class="img-responsive"/>
-                                        <div class="flex-caption clr-black flex-caption--mod">
-                                            <div class="warning "> ваш клиент у вас в руках</div>
-                                            <div>если он держит в своих руках </div>
-                                            мобильное устройство с Вашим приложением!
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <img src="images/slide3.jpg" class="img-responsive"/>
-                                        <div class="flex-caption clr-black  flex-caption--mod">
-                                            Мобильное приложение открывает 
-                                           <div class="warning"> неограниченные возможности для развития </div>
-                                            бизнеса, связи с клиентами и пользователями
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>-->
 
     <section class="web-app-dev">
         <div class="container">
@@ -527,7 +518,7 @@
             </div>
         </div>
     </footer>
-    <section class="bar"></section>
+    <!--<section class="bar"></section>-->
 
     <div class="modal fade" id="free-consultation" tabindex="-1" role="dialog">
         <div class="free-consultation">
@@ -538,7 +529,7 @@
                 бесплатная консультация
             </div>
             <div class="free-consultation__txt--descr">
-                Узнайте, как мобильное приложение решит<br>
+                Узнайте, как мобильное приложение решит
                 Ваши бизнес-задачи!
             </div>
             <div class="free-consultation__items">
