--- a/app/index.html
+++ b/app/index.html
@@ -11,11 +11,11 @@
     <script src="js/common.js?v=9"></script>
 </head>
 
-<body>
+<body id="btn-top">
+    <div class="btn-top">
+        <a data-href="#btn-top"><img src="images/arrow-up.png" alt=""></a>
+    </div>
     <section class="main">
-        <div class="btn-top">
-            <a href="" data-href="#"><img src="images/arrow-up.png" alt=""></a>
-        </div>
         <header class="header">
             <div class="header-container container">
                 <div class="header-logo">
