--- a/app/index.html
+++ b/app/index.html
@@ -512,7 +512,7 @@
                 <div class="footer__txt center-block">
                     <div>ДЕСНОЛ СОФТ</div>            
                     г. Москва, Большой Казенный пер., 1/2, стр. 1, оф. 6        
-                    <div><a href="" tel="tel:+7 (495) 933-48-41">+7 (495) 933-48-41</a></div>         
+                    <div><a href="tel:+7 (495) 933-48-41">+7 (495) 933-48-41</a></div>         
                     <div><a href="mailto:​info@desnol.ru">​info@desnol.ru</a></div>           
                 </div>
             </div>
