--- a/app/index.html
+++ b/app/index.html
@@ -166,7 +166,7 @@
                                         <img src="images/robot2.jpg" class="img-responsive"/>
                                     </div>
                                     <div class="col-xs-7 col-sm-6 col-md-6 slider2__item--txt">
-                                        <span class="slider2__item--bold">...Управляйте</span> данными с любой<br>
+                                        <span class="slider2__item--bold">...Управляйте</span> данными в любой<br>
                                         точке мира
                                     </div>
                                 </li>
