--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Деснолсофт</title>
-    <link rel="stylesheet" href="css/libs.min.css?v=10">
-    <link rel="stylesheet" href="css/styles.css?v=99">
-    <script src="js/libs.min.js?v=99"></script>
-    <script src="js/common.js?v=9"></script>
+    <link rel="stylesheet" href="css/libs.min.css?v=10110111">
+    <link rel="stylesheet" href="css/styles.css?v=01011011011">
+    <script src="js/libs.min.js?v=1111010111"></script>
+    <script src="js/common.js?v=0101110111"></script>
 </head>
 
 <body id="btn-top">
@@ -21,7 +21,7 @@
                 <div class="header-logo">
                     <div class="header-logo__items">
                         <div class="header-logo__img">
-                            <img src="images/logo_2.svg?v=5" alt="">
+                            <img src="images/logo_2.svg?v=7" alt="">
                         </div>
                         <div class="header-logo__txt">
                             мобильные приложения
@@ -89,7 +89,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <a href="" class="btn" data-toggle="modal" data-target="#free-consultation">получите бесплатную консультацию</a>
+                        <a href="" class="btn" data-toggle="modal" data-target="#free-consultation" data-name="Форма из шапки сайта">получите бесплатную консультацию</a>
                     </div>
                 </div>
         </header>
@@ -129,19 +129,32 @@
                     <div class="web-app-dev__plarform--title title">разработка под все популярные платформы</div>
                     <div class="web-app-dev__plarformItems center-block text-center">
                         <div class="web-app-dev__plarformItem">
-                            <img src="images/apple.svg?v=5" alt="">
+                            <img src="images/apple.svg?v=7" alt="">
                         </div>
                         <div class="web-app-dev__plarformItem">
-                            <img src="images/android.svg?v=5" alt="">
+                            <img src="images/android.svg?v=7" alt="">
                         </div>
                         <div class="web-app-dev__plarformItem">
-                            <img src="images/win.svg?v=5" alt="">
+                            <img src="images/win.svg?v=7" alt="">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <section class="video-1c">
+        <div class="container text-center">
+            <div class="row">
+                <div class="title">Хотите интеграцию с 1С? Легко!</div>
+                <!--<div class="video-1c__script"></div>-->
+                <a class="video-1c__click"></a>
+                <iframe class="video-1c__start" width="100%" height="500px" src="https://www.youtube.com/embed/blssiSc5AFI?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+                <a class="video-1c btn" data-toggle="modal" data-target="#free-consultation" data-name="Хотите интеграцию с 1С? Легко!">Закажите мобильное приложение под 1С!</a>
+            </div>
+        </div>
+    </section>
+
     <section class="get-mob-app">
         <div class="container">
             <div class="row">
@@ -338,7 +351,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-md-12">
-                                            <input class="btn text-center" type="submit" value="отправьте заявку">
+                                            <input class="btn text-center" type="submit" value="отправьте заявку" data-name="Мобильное приложение решит ваши бизнес-задачи">
                                         </div>
                                     </div>
                                 </div>
@@ -421,7 +434,7 @@
     <section class="advantage" id="ourExperience">
         <div class="container">
             <div class="row">
-                <div class="advantage-title title">наш опыт - ваше премущество</div>
+                <div class="advantage-title title">наш опыт &mdash; ваше премущество</div>
             </div>
             <div class="row">
                 <div class="advantage__items col-md-12">
