--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Деснолсофт</title>
-    <link rel="stylesheet" href="css/libs.min.css?v=10110111">
-    <link rel="stylesheet" href="css/styles.css?v=01011011011">
-    <script src="js/libs.min.js?v=1111010111"></script>
-    <script src="js/common.js?v=0101110111"></script>
+    <link rel="stylesheet" href="css/libs.min.css?v=1011">
+    <link rel="stylesheet" href="css/styles.css?v=01011011">
+    <script src="js/libs.min.js?v=111101"></script>
+    <script src="js/common.js?v=010111"></script>
 </head>
 
 <body id="btn-top">
@@ -21,7 +21,7 @@
                 <div class="header-logo">
                     <div class="header-logo__items">
                         <div class="header-logo__img">
-                            <img src="images/logo_2.svg?v=7" alt="">
+                            <img src="images/logo_2.svg?v=5" alt="">
                         </div>
                         <div class="header-logo__txt">
                             мобильные приложения
@@ -129,13 +129,13 @@
                     <div class="web-app-dev__plarform--title title">разработка под все популярные платформы</div>
                     <div class="web-app-dev__plarformItems center-block text-center">
                         <div class="web-app-dev__plarformItem">
-                            <img src="images/apple.svg?v=7" alt="">
+                            <img src="images/apple.svg?v=5" alt="">
                         </div>
                         <div class="web-app-dev__plarformItem">
-                            <img src="images/android.svg?v=7" alt="">
+                            <img src="images/android.svg?v=5" alt="">
                         </div>
                         <div class="web-app-dev__plarformItem">
-                            <img src="images/win.svg?v=7" alt="">
+                            <img src="images/win.svg?v=5" alt="">
                         </div>
                     </div>
                 </div>
@@ -149,7 +149,9 @@
                 <div class="title">Хотите интеграцию с 1С? Легко!</div>
                 <!--<div class="video-1c__script"></div>-->
                 <a class="video-1c__click"></a>
-                <iframe class="video-1c__start" width="100%" height="500px" src="https://www.youtube.com/embed/blssiSc5AFI?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+				<video controls width="100%" height="auto" autoplay="autoplay" muted>
+				  <source src="images/work_where_convenient.mp4" type="video/mp4"><!-- MP4 для Safari, IE9, iPhone, iPad, Android, и Windows Phone 7 -->
+				</video>
                 <a class="video-1c btn" data-toggle="modal" data-target="#free-consultation" data-name="Хотите интеграцию с 1С? Легко!">Закажите мобильное приложение под 1С!</a>
             </div>
         </div>
