--- a/app/index.html
+++ b/app/index.html
@@ -150,7 +150,8 @@
                 <!--<div class="video-1c__script"></div>-->
                 <a class="video-1c__click"></a>
 				<video controls width="100%" height="auto" autoplay="autoplay" muted>
-				  <source src="images/work_where_convenient.mp4" type="video/mp4"><!-- MP4 для Safari, IE9, iPhone, iPad, Android, и Windows Phone 7 -->
+					<img src="images/muted.svg">
+					<source src="images/work_where_convenient.mp4" type="video/mp4"><!-- MP4 для Safari, IE9, iPhone, iPad, Android, и Windows Phone 7 -->
 				</video>
                 <a class="video-1c btn" data-toggle="modal" data-target="#free-consultation" data-name="Хотите интеграцию с 1С? Легко!">Закажите мобильное приложение под 1С!</a>
             </div>
